[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="Bomb" type="StaticBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.535156, 0, 0, 1 )
position = Vector2( 0, 9.53674e-007 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="BombDetonateTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="UpCheck" type="RayCast2D" parent="." index="3"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, -50 )
collision_mask = 1

[node name="DownCheck" type="RayCast2D" parent="." index="4"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="LeftCheck" type="RayCast2D" parent="." index="5"]

enabled = false
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 1

[node name="RightCheck" type="RayCast2D" parent="." index="6"]

enabled = false
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 1

[connection signal="timeout" from="BombDetonateTimer" to="." method="_on_BombDetonateTimer_timeout"]


